[package]
name = "electrs-ltc"
version = "0.9.12"
authors = ["Roman Zeyde <me@romanzey.de>", "Loshan <loshan1212@gmail.com>"]
description = "An efficient re-implementation of Electrum Server in Rust for Litecoin"
license = "MIT"
homepage = "https://github.com/litecoin-foundation/electrs-ltc"
repository = "https://github.com/litecoin-foundation/electrs-ltc"
keywords = ["litecoin", "electrum", "server", "index", "database"]
documentation = "https://docs.rs/electrs/"
readme = "README.md"
edition = "2018"
build = "build.rs"

[features]
default = ["metrics"]
metrics = ["prometheus", "tiny_http"]
metrics_process = ["prometheus/process"]

[package.metadata.configure_me]
spec = "internal/config_specification.toml"

[dependencies]
anyhow = "1.0"
configure_me = "0.4"
crossbeam-channel = "0.5"
dirs-next = "2.0"
env_logger = "0.9"
log = "0.4"
parking_lot = "0.11"
prometheus = { version = "0.13", optional = true }
rayon = "1.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
signal-hook = "0.3"
tiny_http = { version = "0.12", optional = true }

[dependencies.electrs-bitcoincore-rpc]
version = "0.17.0-e1"
path = "../electrs-ltc-bitcoincore-rpc/client"

[dependencies.bitcoin]
version = "0.29.2"
features = ["serde", "rand"]

[dependencies.electrs-rocksdb]
# Workaround the following issues:
# - https://github.com/romanz/electrs/issues/403 (support building on ARM 32-bit)
# - https://github.com/romanz/electrs/issues/469 (dynamic linking on Debian 11)
version = "0.15.0-e3"
default-features = false
# ZSTD is used for data compression
# Snappy is only for checking old DB
features = ["zstd", "snappy"]

[build-dependencies]
configure_me_codegen = "0.4.3"

[dev-dependencies]
tempfile = "3.4"

[patch.crates-io]
bitcoin = { git = "https://github.com/ynohtna92/rust-litecoin" }